--- a/src/app/client/danh-muc-khoa-hoc/danh-muc-khoa-hoc.component.html
+++ b/src/app/client/danh-muc-khoa-hoc/danh-muc-khoa-hoc.component.html
@@ -19,7 +19,7 @@
 
                 </div>
                 <div class="course__register">
-                    <button class="btn btn-success">Đăng ký</button>
+                    <button class="btn btn-success" (click)="registerCourse(course.maKhoaHoc)">Đăng ký</button>
                 </div>
             </div>
             <!-- <div class="coursesItem">
