--- a/src/app/client/home/home.component.scss
+++ b/src/app/client/home/home.component.scss
@@ -1,20 +1,45 @@
 #home {
     .carousel {
-        background-image: url(../../../assets/img/pexels-josh-sorenson-small.jpg);
-        height: 35rem;
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
+        // background-image: url(../../../assets/img/pexels-josh-sorenson-small.jpg);
+        height: 50rem;
+        width: 100vw;
         position: relative;
+        overflow: hidden;
+        color: white;
+        text-align: center;
+
+        .carousel__video {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            z-index: 1;
+            video {
+                width: 100%;
+                // height: 100%;
+            }
+        }
+
+        .carousel__overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.4);
+            z-index: 2;
+        }
         .carousel__content {
             position: absolute;
-            top: 30%;
+            top: 55%;
             left: 10%;
-            width: 35%;
+            min-width: 40%;
+            z-index: 3;
             h2 {
                 color: white;
                 font-size: 4rem;
                 font-weight: bold;
+                text-transform: uppercase;
             }
             p {
                 color: white;
