--- a/src/app/client/header/header.component.scss
+++ b/src/app/client/header/header.component.scss
@@ -170,8 +170,9 @@
             .log-sign {
                 flex: 2;
                 display: flex;
-                justify-content: center;
+                justify-content: flex-end;
                 align-items: center;
+                // position: relative;
                 .btn {
                     display: inline-block;
                     padding: 0.5rem 1.2rem;
@@ -203,6 +204,58 @@
                     &:hover {
                         background-color: white;
                         color: #69bde7;
+                    }
+                }
+                .user__login {
+                    width: 50px;
+                    height: 50px;
+                    border-radius: 100%;
+                    // border: red solid 1px;
+                    background-color: black;
+                    position: relative;
+                    right: 0;
+                    transition: 0.5s;
+                    .user__icon {
+                        justify-content: center;
+                        line-height: 50px;
+                        text-align: center;
+                        color: white;
+                        font-weight: 700;
+                    }
+                    .user__profile {
+                        display: none;
+                        position: absolute;
+                        top: 50px;
+                        right: -95px;
+                        width: 250px;
+                        max-height: 500px;
+                        background-color: #ffffff;
+                        .user__profile--header {
+                            display: flex;
+                            align-items: center;
+
+                            .user__profile--header--icon {
+                                width: 5rem;
+                                height: 5rem;
+                                margin: 0.5rem 1rem;
+                                text-align: center;
+                                line-height: 5rem;
+                                border-radius: 100%;
+                                border: 1px solid black;
+                            }
+                            .user__profile--header--info {
+                                font-size: 1.4rem;
+                                font-weight: normal;
+                                line-height: 0.5;
+                                margin-top: 1rem;
+                            }
+                        }
+                    }
+                    &:hover {
+                        box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+                        .user__profile {
+                            display: inline-block;
+                        }
                     }
                 }
             }
