--- a/src/app/client/footer/footer.component.html
+++ b/src/app/client/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="footer" id="footer">
-    <div class="footer__top">
-        <div class="footer__left">
+    <div class="footer__top row">
+        <div class="footer__left col-12 col-md-4">
             <h3 class="footer__left--title">
                 NHẬN TIN SỰ KIỆN &amp; KHUYẾN MÃI
             </h3>
@@ -12,36 +12,36 @@
             <form>
                 <div class="input-group mb-3">
                     <input type="email" class="field" placeholder="Email của bạn" />
-                    <button class="btn" type="submit">
+                    <button class="btn btn-subscribe" type="submit">
                         đăng ký
                     </button>
                 </div>
             </form>
         </div>
-        <div class="footer__mid">
+        <div class="footer__mid col-12 col-md-4">
             <div class="contact-box">
                 <h2>Liên hệ</h2>
                 <input type="text" class="field" placeholder="Tên của bạn" />
                 <input type="email" class="field" placeholder="Email của bạn" />
                 <input type="text" class="field" placeholder="Số điện thoại của bạn" />
                 <textarea class="field area" placeholder="Tin nhắn"></textarea>
-                <button class="btn" type="submit">
+                <button class="btn btn-contact" type="submit">
                     gửi
                 </button>
             </div>
         </div>
-        <div class="footer__right">
+        <div class="footer__right col-12 col-md-4">
             <div class="iframe">
-                <iframe
+                <iframe class="iframe__fb"
                     src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fvoaeasy%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-                    width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+                    width="500" height="340" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
                     allowfullscreen="true"
                     allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
             </div>
         </div>
     </div>
-    <div class="footer__bottom">
-        <div class="footer__bottom--right">
+    <div class="footer__bottom row">
+        <div class="footer__bottom--right col-12 col-md-4">
             <ul>
                 <li>
                     <a href="#">
@@ -81,7 +81,7 @@
                 </li>
             </ul>
         </div>
-        <div class="footer__bottom--mid">
+        <div class="footer__bottom--mid col-12 col-md-4">
             <p>
                 <a href="#">Đây là link ví dụ</a>
                 <a href="#">Đây là link ví dụ</a>
@@ -93,13 +93,13 @@
                 <a href="#">Đây là link ví dụ</a>
             </p>
         </div>
-        <div class="footer__bottom--left"></div>
+        <div class="footer__bottom--left col-12 col-md-4"></div>
     </div>
-    <div class="footer__copyright">
-        <div class="footer__copyright--brand">
+    <div class="footer__copyright row">
+        <div class="footer__copyright--brand col-12 col-md-7">
             © Bản quyền CyberSoft 2017 - 2019
         </div>
-        <div class="footer__copyright--social">
+        <div class="footer__copyright--social col-12 col-md-5">
             GET SOCIAL
             <span>
                 <i class="fab fa-twitter"></i>
