--- a/src/app/client/home/home.component.html
+++ b/src/app/client/home/home.component.html
@@ -5,14 +5,18 @@
         </div>
         <div class="carousel__overlay"></div>
         <div class="carousel__content">
-            <h2 class="carousel__title">Khởi đầu sự nghiệp của bạn</h2>
-            <p>
+            <h2 class="carousel__title animate__animated animate__bounce animate__duration-5s">Khởi đầu sự nghiệp
+                của
+                bạn</h2>
+            <p class="animate__animated animate__bounce">
                 Trở thành lập trình viên chuyên nghiệp tại CyberSoft!
             </p>
+
         </div>
     </div>
     <div class="container">
-        <h2 style="color: white; justify-content: center; display: flex;" class="mt-5">Các khóa học gần đây</h2>
+        <!-- <h2 style="color: white; justify-content: center; display: flex;" class="mt-5">Các khóa học gần đây</h2> -->
+        <app-divider>Các khóa học gần đây</app-divider>
         <div class="coursesList">
             <ng-container class="list-group-item"
                 *ngFor="let course of layDanhSachKhoaHoc| Filter: inputSearch; let i = index">
