responsive _home.scss, responsive _danh-muc-khoa-hoc.scss, responsive _logIn.scss

--- a/src/app/client/header/header.component.html
+++ b/src/app/client/header/header.component.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="log-sign">
-                <span>
+                <span style="display: inline-flex;" class="not__log-sign">
                     <a *ngIf="!courseServices.daDangNhap()" routerLink="/log-in" class="btn transparent">Đăng Nhập</a>
                     <a *ngIf="!courseServices.daDangNhap()" routerLink="/sign-up" class="btn solid">Đăng Ký</a>
 
