--- a/src/app/client/log-in/log-in.component.scss
+++ b/src/app/client/log-in/log-in.component.scss
@@ -1,47 +1,47 @@
-#login {
-    z-index: 1000 !important;
-    width: 60%;
-    margin: 10rem auto;
-    padding: 3rem 5rem;
-    background-color: #60b4df;
-    .login_title {
-        display: flex;
-        justify-content: center;
-        font-size: 3rem;
-        font-weight: 600;
-    }
-    .login_form {
-        font-size: calc(1rem + 0.4vw);
-        .login_form--input {
-            input {
-                padding: 1rem 1.5rem;
-                font-size: 1.8rem;
-            }
-        }
-        .login__form--button {
-            display: flex;
-            justify-content: center;
-            button {
-                display: inline-block;
-                padding: 1rem 2rem;
-                font-size: calc(1rem + 0.2vw);
-                border: 0.2rem solid white;
-                border-radius: 4rem;
-                margin: 0 0.3rem;
-                transition: 0.3s;
-                text-transform: uppercase;
-            }
-            .btn.transparent {
-                background-color: transparent;
-                color: black;
-                white-space: nowrap;
-                font-size: calc(1rem + 0.2vw);
-                min-width: 6rem;
-                &:hover {
-                    background-color: white;
-                    color: #69bde7;
-                }
-            }
-        }
-    }
-}
+// #login {
+//     z-index: 1000 !important;
+//     width: 60%;
+//     margin: 10rem auto;
+//     padding: 3rem 5rem;
+//     background-color: #60b4df;
+//     .login_title {
+//         display: flex;
+//         justify-content: center;
+//         font-size: 3rem;
+//         font-weight: 600;
+//     }
+//     .login_form {
+//         font-size: calc(1rem + 0.4vw);
+//         .login_form--input {
+//             input {
+//                 padding: 1rem 1.5rem;
+//                 font-size: 1.8rem;
+//             }
+//         }
+//         .login__form--button {
+//             display: flex;
+//             justify-content: center;
+//             button {
+//                 display: inline-block;
+//                 padding: 1rem 2rem;
+//                 font-size: calc(1rem + 0.2vw);
+//                 border: 0.2rem solid white;
+//                 border-radius: 4rem;
+//                 margin: 0 0.3rem;
+//                 transition: 0.3s;
+//                 text-transform: uppercase;
+//             }
+//             .btn.transparent {
+//                 background-color: transparent;
+//                 color: black;
+//                 white-space: nowrap;
+//                 font-size: calc(1rem + 0.2vw);
+//                 min-width: 6rem;
+//                 &:hover {
+//                     background-color: white;
+//                     color: #69bde7;
+//                 }
+//             }
+//         }
+//     }
+// }
