--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -45,4 +45,7 @@
 
 // main layouts
 @import "./Layouts/header";
+@import "./Layouts/home";
+@import "./Layouts/danh-muc-khoa-hoc";
+@import "./Layouts/logIn";
 @import "./Layouts/footer";
