--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -48,4 +48,6 @@
 @import "./Layouts/home";
 @import "./Layouts/danh-muc-khoa-hoc";
 @import "./Layouts/logIn";
+@import "./Layouts/signUp";
+@import "./Layouts/courseDetail";
 @import "./Layouts/footer";
