add _user.scss responsive, almost finished responsive Client module

--- a/src/app/client/user-home/user-home.component.html
+++ b/src/app/client/user-home/user-home.component.html
@@ -1,4 +1,4 @@
-<app-user>
+<app-user id="user">
     <a class="item" routerLink="/user" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Thông
         tin
         tài khoản</a>
