--- a/src/app/client/user/user.component.html
+++ b/src/app/client/user/user.component.html
@@ -1,7 +1,7 @@
 <app-divider>Thông tin học viên</app-divider>
 <div class="user container">
     <div class="row">
-        <div class="user__menu col-3">
+        <div class="user__menu col-12 col-md-3">
             <div class="user__menu--header">
                 <div class="user__menu--header--avatar">
                     <i class="fa fa-user-tie"></i>
@@ -16,7 +16,7 @@
                 <ng-content></ng-content>
             </div>
         </div>
-        <div class="user__content col-9">
+        <div class="user__content col-12 col-md-9">
             <router-outlet></router-outlet>
         </div>
     </div>
