--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -50,4 +50,5 @@
 @import "./Layouts/logIn";
 @import "./Layouts/signUp";
 @import "./Layouts/courseDetail";
+@import "./Layouts/user";
 @import "./Layouts/footer";
