--- a/src/app/client/user-courses/user-courses.component.scss
+++ b/src/app/client/user-courses/user-courses.component.scss
@@ -1,15 +1,15 @@
-table {
-    margin: 1.5rem 2rem;
-    border-collapse: collapse;
-    width: 100%;
-    thead,
-    tbody {
-        tr {
-            td {
-                border: 1px solid #dddddd;
-                text-align: left;
-                padding: 1rem 1.5rem;
-            }
-        }
-    }
-}
+// table {
+//     margin: 1.5rem 2rem;
+//     border-collapse: collapse;
+//     width: 100%;
+//     thead,
+//     tbody {
+//         tr {
+//             td {
+//                 border: 1px solid #dddddd;
+//                 text-align: left;
+//                 padding: 1rem 1.5rem;
+//             }
+//         }
+//     }
+// }
