--- a/src/assets/sass/Layouts/_header.scss
+++ b/src/assets/sass/Layouts/_header.scss
@@ -1,6 +1,7 @@
 .header {
-    position: sticky;
+    position: fixed;
     top: 0;
+    left: 0;
     background-color: #60b4df;
     width: 100%;
     z-index: 10;
